--- a/kosarka.html
+++ b/kosarka.html
@@ -99,7 +99,7 @@
 				<p>Сезона 1972/73. није донела одбрану националне титуле; КК Раднички Београд је био за корак бољи, али је освојен други трофеј у националном купу. Редом су побеђивани чачански Борац (89 : 86), београдски Раднички (90 : 79) и сплитска Југопластика (84 : 75). Велико финале одржано је у Загребу; резултатом 71 : 65, кошаркаши Црвене звезде савладали су Партизан. Такође, те сезоне забележен је и други наступ у Купу европских шампиона. У 1. колу холандски Левис фламингос је савладан резултатима 107 : 74 и 72 : 88, да би у борби за пласман у четвртфиналну групу Црвена звезда савладала албанску екипу Партизана резултатима 99 : 74 и 94 : 83. У групној фази, Црвено-бели су у конкуренцији Макабија (103 : 88, 102 : 113), Реал Мадрида (80 : 70, 77 : 74) и Симентала (74 : 80, 85 : 108) заузели другу позицију и пласирали се у полуфинале елитног такмичења. У утакмици за финале московски ЦСКА је био бољи. Армејци су славили оба пута 90 : 98 и 83 : 100, и заслужено се пласирали у борбу за титулу европског првака.</p>
 				<div class="index-footer"></div>
 			</div>
-			<aside>
+			<aside class="he-kosarka">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam labore aliquam perspiciatis voluptatum, nesciunt minima molestias eos facere quo illo doloribus consequatur est unde dignissimos perferendis expedita, pariatur numquam. Quia eos libero, nesciunt quae voluptatibus natus error sunt? Quaerat, ipsum dolor inventore magni sunt libero natus doloremque aperiam nulla soluta nemo corrupti eius dolores delectus, repellat mollitia dolorum molestias. Deleniti omnis excepturi hic est fugiat cum veniam impedit, nesciunt nihil voluptas officia commodi doloremque dolor! Animi debitis delectus natus? Labore magna</p>
 			</aside>
 		</main>
