--- a/kosarka.html
+++ b/kosarka.html
@@ -100,7 +100,39 @@
 				<div class="index-footer"></div>
 			</div>
 			<aside class="he-kosarka">
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam labore aliquam perspiciatis voluptatum, nesciunt minima molestias eos facere quo illo doloribus consequatur est unde dignissimos perferendis expedita, pariatur numquam. Quia eos libero, nesciunt quae voluptatibus natus error sunt? Quaerat, ipsum dolor inventore magni sunt libero natus doloremque aperiam nulla soluta nemo corrupti eius dolores delectus, repellat mollitia dolorum molestias. Deleniti omnis excepturi hic est fugiat cum veniam impedit, nesciunt nihil voluptas officia commodi doloremque dolor! Animi debitis delectus natus? Labore magna</p>
+					<p class="text-center">
+							<iframe src="http://www.youtube.com/embed/47ehP9yuh6Q"></iframe>
+						<q>Туча хулигана, ружна слика дербија.</q>	 
+					</p>
+					<hr>
+	
+					<p class="text-center">
+							<iframe src="https://www.youtube.com/embed/LEfYOPU7Jjw"></iframe>
+						<q>Наши омладинци све бољи и бољи.</q>	 
+					</p>
+					<hr>
+					
+					<p class="text-center">
+							<iframe src="https://www.youtube.com/embed/dpPLd_72mi4"></iframe>
+						<q>Треба учити од комшија.</q>	 
+					</p>
+					<hr>
+	
+					<p class="text-center">
+							<a href="http://www.novosti.rs/vesti/sport.294.html:729963-Pre-27-godina---Crvena-zvezda-je-sampion-Evrope">
+							<img src="http://www.novosti.rs/upload/thumbs/images/2018//05/29/sp-zvezda_620x0.jpg" alt="">
+							</a>
+						<q>Поводом историског успеха Црвене Звезде у уторак организује коктел на стадиону <q>Рајко Митић</q> са намером да обележи годишљицу освајања титуле првака Европе</q>	 
+					</p>
+					<hr>
+	
+					<p class="text-center">
+							<a href="https://sport.blic.rs/kosarka/domaca-kosarka-i-aba/kapiten-urucio-priznanje-branko-lazic-ostvario-bolesnom-decaku-veliki-san/bbzeg0f">
+							<img src="https://ocdn.eu/pulscms-transforms/1/cNzk9lMaHR0cDovL29jZG4uZXUvaW1hZ2VzL3B1bHNjbXMvWkdJN01EQV8vYWRiNTU4NmY0MjgzNGFmYzI1NWE0MDdmMGYzZGVhMmIuanBlZ5GTAs0C5ACBoTAB" alt="">
+							</a>
+						<q>КАПИТЕНУ УРУЧЕНО ПРИЗНАЊЕ Бранко Лазић остварио болесном дечаку велики сан.</q>	 
+					</p>
+					<hr>
 			</aside>
 		</main>
 
