--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 			<a href="http://partizan.rs/pocetna/" target="_blank">
 				<img src="https://upload.wikimedia.org/wikipedia/sr/d/d8/SDCrvenaZvezdaLogo.png" alt="Grb Crvene Zvezde">
 			</a>
-
 			<h1>Спортско Друштво Црвена Звезда</h1>
 		</header>
 
@@ -94,6 +93,8 @@
 				<p class="d-block float-left">Звездане стазе :</p>
 				<p class="indent">Сада са друге стране Саве, ону мочвару и трску, почео је да прекрива неки нови Београд. Рокенрол је освајао младе, а на игранке се ишло веспама. Фудбалери Звезде су све чешће били шампиони (пет титула, три Купа), а навијачи су се навикавали и на успехе на међународној сцени. Полуфинале Купа европских шампиона и италијанска Фиорентина били су непремостива препрека. У витрине клуба стигао је први европски трофеј – Дунавски куп. Нови стадион је отворио капије, а на терену се посебно истицао један београдски шмекер, Драгослав Шекуларац.</p>
 				<p>Кошаркашице су стигле чак до 16. титуле, а одбојкаши две године узастопно шампиони. Првенство први пут освајају и одбојкашице и почињу тријумфални низ који је касније закључен са бројем шест. Шампионским звањем хвалили су се и рукометаши, који су се домогли прве дупле круне.</p>
+				
+
 				<p>Биле су то године за померање граница, за испитивање сопствених лимита. Веселин Мугоша поставио је европски рекорд на две миље, Милија Јоцовић постао је први Југословен који је куглом срушио границе од 17 и 18 метара, а Милица Рајков Нинков донела је клубу чак девет титула првакиње државе. Тениски, пливачки, рвачки и скијашки клуб добили су прве шампионе Југославије. У мачевалачки клуб стигла је Вера Јефтимијадес. Њен долазак гарантовао је титуле у флорету на државним првенствима у деценији која је уследила. Доминирали су мачеваоци, али и боксери који су освајали шампионат као по навици.</p>
 				<div class="index-footer"></div>
 			</div>
@@ -136,6 +137,20 @@
 		</main>
 
 		<footer>
+			<div class="stadion">
+					<h3>Стадион Црвене Звезде</h3>
+					<p>
+						<a href="http://www.crvenazvezdafk.com/sr/stadion">Рајко Митић</a>
+					</p>
+			</div>
+			
+
+			<div class="karte">
+				<h3>Продаја карата :</h3>
+				<p>
+					<a href="https://www.iticket.rs/tickets/offline.php5">Онлине куповина</a>
+				</p>
+			</div>
 			
 		</footer>
 
