--- a/kosarka.html
+++ b/kosarka.html
@@ -11,9 +11,9 @@
 	<div class="container">
 
 		<header>
-			<a href="http://sd-crvenazvezda.net/istorija/" target="_blank">
-				<img src="https://upload.wikimedia.org/wikipedia/sr/d/d8/SDCrvenaZvezdaLogo.png" alt="Grb Crvene Zvezde">
-			</a>
+			<a href="http://www.kkcrvenazvezda.rs/" class="kk-img">
+					<img src="https://upload.wikimedia.org/wikipedia/sr/thumb/2/23/KK_Zvezda_logo.svg/1200px-KK_Zvezda_logo.svg.png" alt="">
+				</a>
 			<h1>Спортско Друштво Црвена Звезда</h1>
 		</header>
 
@@ -137,8 +137,22 @@
 		</main>
 
 		<footer>
-			
-		</footer>
+				<div class="stadion">
+						<h3>Стадион Црвене Звезде</h3>
+						<p>
+							<a href="http://www.crvenazvezdafk.com/sr/stadion">Рајко Митић</a>
+						</p>
+				</div>
+				
+	
+				<div class="karte">
+					<h3>Продаја карата :</h3>
+					<p>
+						<a href="https://www.iticket.rs/tickets/offline.php5">Онлине куповина</a>
+					</p>
+				</div>
+				
+			</footer>
 
 	</div><!-- container -->
 </body>
