--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
 				<div class="index-footer"></div>
 			</div>
 			<aside>
+
+					<p class="text-center wiki-sd">
+							<a href="https://sr.wikipedia.org/sr/%D0%A1%D0%94_%D0%A6%D1%80%D0%B2%D0%B5%D0%BD%D0%B0_%D0%B7%D0%B2%D0%B5%D0%B7%D0%B4%D0%B0">
+							  ВикипедијА
+							</a>
+						<q>Све о Црвеној АРМИЈИ!</q>	 
+					</p>
+					<hr>
+
+					<p class="text-center">
+							<iframe src="https://www.youtube.com/embed/dAScoAay8mk"></iframe>
+						<q>Репортажа : Звезда - Арсенал.</q>	 
+					</p>
+					<hr>
+
 				<p class="text-center">
 						<iframe src="https://www.youtube.com/embed/s4JOeUmfrow"></iframe>
 					<q>Туча хулигана, ружна слика дербија.</q>	 
@@ -138,18 +153,15 @@
 
 		<footer>
 			<div class="stadion">
-					<h3>Стадион Црвене Звезде</h3>
-					<p>
-						<a href="http://www.crvenazvezdafk.com/sr/stadion">Рајко Митић</a>
-					</p>
+					<h3>Стадион Црвене Звезде : 
+									<a href="http://www.crvenazvezdafk.com/sr/stadion">Рајко Митић</a>
+					</h3>		
 			</div>
 			
-
 			<div class="karte">
-				<h3>Продаја карата :</h3>
-				<p>
-					<a href="https://www.iticket.rs/tickets/offline.php5">Онлине куповина</a>
-				</p>
+				<h3>Продаја карата : 
+								<a href="https://www.iticket.rs/tickets/offline.php5">Онлине куповина</a>
+				</h3>
 			</div>
 			
 		</footer>
