--- a/kosarka.html
+++ b/kosarka.html
@@ -110,6 +110,14 @@
 					<hr>
 
 					<p class="text-center">
+						<a href="https://sport.blic.rs/kosarka/domaca-kosarka-i-aba/kapiten-urucio-priznanje-branko-lazic-ostvario-bolesnom-decaku-veliki-san/bbzeg0f">
+						<img src="https://ocdn.eu/pulscms-transforms/1/cNzk9lMaHR0cDovL29jZG4uZXUvaW1hZ2VzL3B1bHNjbXMvWkdJN01EQV8vYWRiNTU4NmY0MjgzNGFmYzI1NWE0MDdmMGYzZGVhMmIuanBlZ5GTAs0C5ACBoTAB" alt="">
+						</a>
+					<q>КАПИТЕНУ УРУЧЕНО ПРИЗНАЊЕ Бранко Лазић остварио болесном дечаку велики сан.</q>	 
+				</p>
+				<hr>
+
+					<p class="text-center">
 							<iframe src="https://www.youtube.com/embed/dAScoAay8mk"></iframe>
 						<q>Репортажа : Звезда - Арсенал.</q>	 
 					</p>
@@ -142,12 +150,19 @@
 				<hr>
 
 				<p class="text-center">
-						<a href="https://sport.blic.rs/kosarka/domaca-kosarka-i-aba/kapiten-urucio-priznanje-branko-lazic-ostvario-bolesnom-decaku-veliki-san/bbzeg0f">
-						<img src="https://ocdn.eu/pulscms-transforms/1/cNzk9lMaHR0cDovL29jZG4uZXUvaW1hZ2VzL3B1bHNjbXMvWkdJN01EQV8vYWRiNTU4NmY0MjgzNGFmYzI1NWE0MDdmMGYzZGVhMmIuanBlZ5GTAs0C5ACBoTAB" alt="">
-						</a>
-					<q>КАПИТЕНУ УРУЧЕНО ПРИЗНАЊЕ Бранко Лазић остварио болесном дечаку велики сан.</q>	 
-				</p>
-				<hr>
+					<a href="http://www.politika.rs/scc/clanak/405251/Sport/Terzic-Dug-prepolovljen-Crvena-zvezda-posluje-pozitivno">
+					<img src="http://www.politika.rs/upload/Article/Image/2018_06/ZVEZDA-crvena-sampio-srbije-f-negovanovic-n.jpg" alt="">
+					</a>
+				<q>Терзић: Дуг преполовљен, Црвена звезда послује позитивно.</q>	 
+			</p>
+			<hr>
+
+			<p class="text-center">
+				<a href="http://www.politika.rs/scc/clanak/405792/Sport/Crvena-zvezda-protiv-Spartaksa-na-startu-kvalifikacija">
+				<img src="http://www.politika.rs/upload/Article/Image/2018_06/crvena-zvezda-fk-fudbal-f-n-negovanovic.jpg" alt="">
+				</a>
+			<q>Црвена звезда против Спартакса на старту квалификација.</q>	 
+		</p>
 
 			</aside>
 		</main>
