--- a/fudbal.html
+++ b/fudbal.html
@@ -163,7 +163,7 @@
 				<hr>
 
 				<p class="text-center">
-					<a href="http://www.politika.rs/scc/clanak/405792/Sport/Crvena-zvezda-protiv-Spartaksa-na-startu-kvalifikacija">
+					<a href="http://www.politika.rs/scc/clanak/405792/Sport/Crvena-zvezda-protiv-Spartaksa-na-startu-kvalifikacija" target="_blank">
 						<img src="http://www.politika.rs/upload/Article/Image/2018_06/crvena-zvezda-fk-fudbal-f-n-negovanovic.jpg" alt="">
 					</a>
 					<q>Црвена звезда против Спартакса на старту квалификација.</q>	 
@@ -177,14 +177,14 @@
 			<div class="stadion">
 				<h5>Стадион "Рајко Митић"
 					Љутице Бодана 1а, Београд 11000: 
-					<a href="http://www.crvenazvezdafk.com/sr/stadion">Куповина Карате</a>
+					<a href="http://www.crvenazvezdafk.com/sr/stadion" target="_blank">Куповина Карате</a>
 				</h5>		
 			</div>
 			
 			<div class="karte">
 				<h5>Хала "Александар Николић"
 					Чарлија Чаплина 39, Београд: 
-					<a href="https://www.iticket.rs/tickets/offline.php5">Куповина Карата</a>
+					<a href="https://www.iticket.rs/tickets/offline.php5" target="_blank">Куповина Карата</a>
 				</h5>
 			</div>
 			
