--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<aside>
 
 				<p class="text-center wiki-sd">
-					<a href="https://sr.wikipedia.org/sr/%D0%A1%D0%94_%D0%A6%D1%80%D0%B2%D0%B5%D0%BD%D0%B0_%D0%B7%D0%B2%D0%B5%D0%B7%D0%B4%D0%B0">
+					<a href="https://sr.wikipedia.org/sr/%D0%A1%D0%94_%D0%A6%D1%80%D0%B2%D0%B5%D0%BD%D0%B0_%D0%B7%D0%B2%D0%B5%D0%B7%D0%B4%D0%B0" target="_blank">
 						ВикипедијА
 					</a>
 					<q>Све о Црвеној АРМИЈИ!</q>	 
@@ -109,7 +109,7 @@
 				<hr>
 
 				<p class="text-center">
-					<a href="http://www.novosti.rs/vesti/sport.294.html:729963-Pre-27-godina---Crvena-zvezda-je-sampion-Evrope">
+					<a href="http://www.novosti.rs/vesti/sport.294.html:729963-Pre-27-godina---Crvena-zvezda-je-sampion-Evrope" target="_blank">
 						<img src="http://www.novosti.rs/upload/thumbs/images/2018//05/29/sp-zvezda_620x0.jpg" alt="">
 					</a>
 					<q>Поводом историског успеха Црвене Звезде у уторак организује коктел на стадиону <q>Рајко Митић</q> са намером да обележи годишљицу освајања титуле првака Европе</q>	 
@@ -141,7 +141,7 @@
 				<hr>
 
 				<p class="text-center">
-					<a href="https://sport.blic.rs/kosarka/domaca-kosarka-i-aba/kapiten-urucio-priznanje-branko-lazic-ostvario-bolesnom-decaku-veliki-san/bbzeg0f">
+					<a href="https://sport.blic.rs/kosarka/domaca-kosarka-i-aba/kapiten-urucio-priznanje-branko-lazic-ostvario-bolesnom-decaku-veliki-san/bbzeg0f" target="_blank">
 						<img src="https://ocdn.eu/pulscms-transforms/1/cNzk9lMaHR0cDovL29jZG4uZXUvaW1hZ2VzL3B1bHNjbXMvWkdJN01EQV8vYWRiNTU4NmY0MjgzNGFmYzI1NWE0MDdmMGYzZGVhMmIuanBlZ5GTAs0C5ACBoTAB" alt="">
 					</a>
 					<q>КАПИТЕНУ УРУЧЕНО ПРИЗНАЊЕ Бранко Лазић остварио болесном дечаку велики сан.</q>	 
@@ -155,14 +155,14 @@
 			<div class="stadion">
 				<h5>Стадион "Рајко Митић"
 					Љутице Бодана 1а, Београд 11000: 
-					<a href="http://www.crvenazvezdafk.com/sr/stadion">Куповина Карате</a>
+					<a href="http://www.crvenazvezdafk.com/sr/stadion" target="_blank">Куповина Карате</a>
 				</h5>		
 			</div>
 			
 			<div class="karte">
 				<h5>Хала "Александар Николић"
 					Чарлија Чаплина 39, Београд: 
-					<a href="https://www.iticket.rs/tickets/offline.php5">Куповина Карата</a>
+					<a href="https://www.iticket.rs/tickets/offline.php5" target="_blank">Куповина Карата</a>
 				</h5>
 			</div>
 			
