--- a/kosarka.html
+++ b/kosarka.html
@@ -14,7 +14,7 @@
 			<a href="http://www.kkcrvenazvezda.rs/" class="kk-img">
 				<img src="https://upload.wikimedia.org/wikipedia/sr/thumb/2/23/KK_Zvezda_logo.svg/1200px-KK_Zvezda_logo.svg.png" alt="">
 			</a>
-			<h1>Спортско Друштво Црвена Звезда</h1>
+			<h1>Кошаркашки Клуб Црвена Звезда</h1>
 		</header>
 
 		<nav>
