--- a/fudbal.html
+++ b/fudbal.html
@@ -14,7 +14,7 @@
 			<a href="http://www.crvenazvezdafk.com/" target="_blank">
 				<img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Grb_FK_Crvena_zvezda_%281995_-_2010%29.PNG" alt="">
 			</a>
-			<h1>Спортско Друштво Црвена Звезда</h1>
+			<h1>Фудбалски Клуб Црвена Звезда</h1>
 		</header>
 
 		<nav>
