--- a/fudbal.html
+++ b/fudbal.html
@@ -191,5 +191,12 @@
 		</footer>
 
 	</div><!-- container -->
+
+	<div class="backToCV">
+		<a href="https://markoton.github.io/MarkoTON-Resume.github.io/" target="_blank">
+			<img src="img/resume.png" alt="Resume" class="rounded-square">
+		</a>
+	</div>
+	
 </body>
 </html>
